AAP-21776 - implemented peer review changes

--- a/downstream/modules/platform/con-gw-clustered-redis.adoc
+++ b/downstream/modules/platform/con-gw-clustered-redis.adoc
@@ -22,8 +22,8 @@ The benefits of deploying clustered Redis over single-node Redis include the fol
 * Data can be dynamically adjusted.
 * Automatic failover of the primary nodes is initiated during system failures.
 
-Therefore, if you need data scalability and automatic failover, deploy Ansible Automation Platform with a clustered Redis. For more information about scalability with Redis, refer to link:https://redis.io/docs/latest/operate/oss_and_stack/management/scaling/[Scale with Redis Cluster] in the Redis product documentation.
+Therefore, if you need data scalability and automatic failover, deploy {PlatformNameShort} with a clustered Redis. For more information about scalability with Redis, refer to link:https://redis.io/docs/latest/operate/oss_and_stack/management/scaling/[Scale with Redis Cluster] in the Redis product documentation.
 
-For information on deploying Ansible Automation Platform with clustered Redis, refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/containerized_installation[{TitleContainerizedInstall}] guide or the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/installing_on_openshift_container_platform[{TitleOperatorInstallation}] guide.
+For information on deploying {PlatformNameShort} with clustered Redis, refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/containerized_installation[{TitleContainerizedInstall}] guide or the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/installing_on_openshift_container_platform[{TitleOperatorInstallation}] guide.
 
 include::snippets/external-site-disclaimer.adoc[]
