AAP-21776 - Updated default to clustered Redis

--- a/downstream/modules/platform/con-gw-single-node-redis.adoc
+++ b/downstream/modules/platform/con-gw-single-node-redis.adoc
@@ -4,7 +4,7 @@
 
 = Single-node Redis
 
-Single-node Redis consists of a simple architecture that is easy to deploy and configure. A single-node Redis shared between the platform gateway and {EDAName} is provided by default when installing {PlatformNameShort} in containerized and operator-based deployments.
+Single-node Redis consists of a simple architecture that is easy to deploy and configure.
 
 image::gw-single-node-redis.png[Single-node Redis deployment]
 
