--- a/downstream/modules/platform/con-gw-clustered-redis.adoc
+++ b/downstream/modules/platform/con-gw-clustered-redis.adoc
@@ -4,7 +4,7 @@
 
 = Clustered Redis
 
-With clustered Redis, data is automatically partitioned over multiple nodes to provide performance stability and nodes are assigned as replicas to provide reliability. Clustered Redis deployment is supported in containerized and operator-based installations.
+With clustered Redis, data is automatically partitioned over multiple nodes to provide performance stability and nodes are assigned as replicas to provide reliability. Clustered Redis shared between the platform gateway and {EDAName} is provided by default when installing {PlatformNameShort} in containerized and operator-based deployments.
 
 [NOTE]
 ====
