commented out most of the info on certified and validated collections

--- a/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
+++ b/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
@@ -13,14 +13,20 @@ Red Hat Ansible content contains two types of content:
 * {CertifiedName}
 * {Valid} collections
 
+You can use both {CertifiedName} or {Valid} collections to build your automation library. For more information on the differences between {CertifiedName} and {Valid} collections, see the Knowledgebase article link:https://access.redhat.com/support/articles/ansible-automation-platform-certified-content[{CertifiedName} and {Valid}], or xref:assembly-validated-content[{Valid}] in this guide.
+
+//// 
 Ansible validated collections are available in your {PrivateHubName} through the platform installer.
 When you download {PlatformName} with the bundled installer, validated content is pre-populated into the {PrivateHubName} by default, but only if you enable the {PrivateHubName} as part of the inventory.
 
 If you are not using the bundle installer, you can use a Red Hat supplied Ansible playbook to install validated content.
+
 For further information, see xref:assembly-validated-content[{Valid}].
+////
 
 You can update these collections manually by downloading their packages.
 
+//// 
 [discrete]
 == Why certify Ansible collections?
 
@@ -52,6 +58,8 @@ If there is a problem with the certified collection, support teams transfer the 
 You can create and certify collections that contain only roles.
 Current testing requirements are focused on collections containing modules, and additional resources are currently in progress for testing collections containing only roles.
 Contact ansiblepartners@redhat.com for more information.
+
+////
 
 include::assembly-synclists.adoc[leveloffset=+1]
 include::assembly-syncing-to-cloud-repo.adoc[leveloffset=+1]
