--- a/downstream/modules/eda/con-custom-credential-types.adoc
+++ b/downstream/modules/eda/con-custom-credential-types.adoc
@@ -2,21 +2,17 @@
 
 = Custom credential types
 
-As a system administrator, you can define a custom credential type works in ways similar to existing credential types in a standard format using a YAML or JSON-like definition. For example, a custom credential type can inject an API token for a third-party web service into an environment variable for your rulebook or custom inventory script to consume.
+As a system administrator, you can define a custom credential type works in ways similar to existing credential types in a standard format using a YAML or JSON-like definition. 
 
-Each credential type displays its own unique configurations in the Input Configuration field and the Injector Configuration field, if applicable. Custom credentials support the following ways of injecting their authentication information:
-
-* Environment variables
-* Ansible extra variables
-* File-based templating, which means generating .ini or .conf files that contain credential values
+Each credential type displays its own unique configurations in the Input Configuration field and the Injector Configuration field, if applicable. Custom credentials support Ansible extra variables as a means of injecting their authentication information. 
 
 //[J.Self] Reviewers: please confirm if this is true. I borrowed it from automation controller content, per suggestions from several SMEs and one of our principal tech writers. I just want to confirm technical accuracy here, especially the last line as we might not have "machine credentials".
-You can attach one SSH and multiple cloud credentials to a job template. Each cloud credential must be of a different type. Only one of each type of credential is permitted. Vault credentials and machine credentials are separate entities.
+You can attach one or more cloud, vault, and {PlatformName} credentials to a job template. 
 
 [NOTE]
 ====
-* When creating a new credential type, you must avoid collisions in the `extra_vars`, `env``, and file namespaces.
-* Environment variable or extra variable names must not start with *EDA_* because they are reserved.
+* When creating a new credential type, you must avoid collisions in the `extra_vars`.
+* Extra variable names must not start with *EDA_* because they are reserved.
 * You must have System administrator (superuser) permissions to be able to create and edit a credential type and to be able to view the *Injector configuration* field.
 ====
 
