AAP-22022 Incorporated feedback from SME Review (M. Kanoor)

--- a/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
@@ -8,7 +8,7 @@ You can create a credential type to use with a source plugin or a private contai
 .Procedure
 
 . Log in to the {PlatformNameShort} Dashboard.
-. From the navigation panel, select {MenuAECredentialType}.
+. From the navigation panel, select {MenuADCredentialType}.
 . Click btn:[Create credential type].
 . Insert the following:
 +
