AAP-22022 Incorporated feedback from SME Review (M. Kanoor)

--- a/downstream/modules/eda/proc-eda-set-up-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential.adoc
@@ -22,7 +22,7 @@ You can create a credential to use with a source plugin or a private container r
 Name:: Insert the name.
 Description:: This field is optional.
 Organization:: Click the list to select an organization or select *Default*.
-Credential type:: Select from five built-in credentials and event stream credentials.
+Credential type:: Click the list to select your Credential type.
 +
 [NOTE]
 ====
