Further edits to rulebook chapter

--- a/downstream/modules/eda/proc-eda-activate-webhook.adoc
+++ b/downstream/modules/eda/proc-eda-activate-webhook.adoc
@@ -6,7 +6,7 @@ In Openshift environments, you can allow webhooks to reach an activation-job-pod
 
 .Prerequisites
 
-* You have created a rulebook activation in the {EDAcontroller} Dashboard.
+* You have created a rulebook activation.
 
 [NOTE]
 ====
