--- a/downstream/modules/eda/proc-eda-delete-rulebook-activations.adoc
+++ b/downstream/modules/eda/proc-eda-delete-rulebook-activations.adoc
@@ -2,6 +2,8 @@
 
 = Deleting rulebook activations
 
+.Procedure
+
 . Select the btn:[More Actions] icon *{MoreActionsIcon}* next to the *Rulebook Activation enabled/disabled* toggle.
 . Select btn:[Delete rulebook activation].
 . In the window, select btn:[Yes, I confirm that I want to delete these X rulebook activations].
