--- a/downstream/modules/eda/proc-eda-enable-rulebook-activations.adoc
+++ b/downstream/modules/eda/proc-eda-enable-rulebook-activations.adoc
@@ -2,6 +2,8 @@
 
 = Enabling and disabling rulebook activations
 
+.Procedure
+
 . Select the switch on the row level to enable or disable your chosen rulebook.
 . In the window, select btn:[Yes, I confirm that I want to enable/disable these X rulebook activations].
 . Select btn:[Enable/Disable rulebook activation].
