--- a/downstream/modules/eda/proc-eda-restart-rulebook-activations.adoc
+++ b/downstream/modules/eda/proc-eda-restart-rulebook-activations.adoc
@@ -7,6 +7,8 @@
 You can only restart a rulebook activation if it is currently enabled and the restart policy was set to *Always* when it was created.
 ====
 
+.Procedure
+
 . Select the btn:[More Actions] icon *{MoreActionsIcon}* next to *Rulebook Activation enabled/disabled* toggle.
 . Select btn:[Restart rulebook activation].
 . In the window, select btn:[Yes, I confirm that I want to restart these X rulebook activations].
