--- a/downstream/modules/platform/proc-aap-controller-restore.adoc
+++ b/downstream/modules/platform/proc-aap-controller-restore.adoc
@@ -19,9 +19,9 @@ If the backup custom resource being restored is a backup of a currently running 
 * An AutomationControllerBackup is available on a PVC in your cluster.
 
 .Procedure
-. Log in to *{OCP}*.
+. Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatform} deployment.
 . Select the *Automation Controller Restore* tab.
 . Click btn:[Create AutomationControllerRestore].
 . Enter a *Name* for the recovery deployment.
@@ -29,7 +29,7 @@ If the backup custom resource being restored is a backup of a currently running 
 +
 [NOTE]
 ====
-This should be different from the original deployment name.
+This must be different from the original deployment name.
 ====
 +
 . Select the *Backup source to restore from*. *Backup CR* is recommended.
@@ -40,9 +40,9 @@ A new deployment is created and your backup is restored to it. This can take app
 
 
 .Verification
-. Log in to Red Hat *{OCP}*
+. Log in to Red Hat {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatform} deployment.
 . Select the *AutomationControllerRestore* tab.
 . Select the restore resource you want to verify.
 . Scroll to *Conditions* and check that the *Successful* status is `True`.
