--- a/downstream/modules/platform/proc-aap-hub-backup.adoc
+++ b/downstream/modules/platform/proc-aap-hub-backup.adoc
@@ -8,13 +8,13 @@ Use this procedure to back up a deployment of the hub, including all hosted Ansi
 .Prerequisites
 
 * You must be authenticated with an OpenShift cluster.
-* You have installed the {OperatorPlatform} on the cluster.
-* The {HubName} is deployed to using the {OperatorPlatform}.
+* You have installed {OperatorPlatform} on the cluster.
+* You have deployed {HubName} using the {OperatorPlatform}.
 
 .Procedure
-. Log in to *{OCP}*.
+. Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatform} deployment.
 . Select the *Automation Hub Backup* tab.
 . Click btn:[Create AutomationHubBackup].
 . Enter a *Name* for the backup.
