--- a/downstream/modules/platform/proc-aap-hub-restore.adoc
+++ b/downstream/modules/platform/proc-aap-hub-restore.adoc
@@ -17,9 +17,9 @@ The name specified for the new AutomationHub custom resource must not match an e
 * An AutomationHubBackup is available on a PVC in your cluster.
 
 .Procedure
-. Log in to *{OCP}*.
+. Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatform} deployment.
 . Select the *Automation Hub Restore* tab.
 . Click btn:[Create AutomationHubRestore].
 . Enter a *Name* for the recovery deployment.
@@ -27,4 +27,4 @@ The name specified for the new AutomationHub custom resource must not match an e
 . Enter the *Backup Name* of the AutomationHubBackup object.
 . Click btn:[Create].
 +
-This creates a new deployment and your backup is restored to it.
+This creates a new deployment and restores your backup to it.
