--- a/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
@@ -4,18 +4,21 @@
 Regularly backing up your *{PlatformNameShort}* deployment is vital to protect against unexpected data loss and application errors. *{PlatformNameShort}* hosts any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you back up *{PlatformNameShort}* the operator will also back up these components.
 
 .Prerequisites
-* You must be authenticated on Openshift cluster.
-* The {OperatorPlatform} has been installed on the cluster.
-* The *{PlatformNameShort}* instance is deployed using the {OperatorPlatform}.
+* You must be authenticated on OpenShift cluster.
+* You have installed {OperatorPlatform} on the cluster.
+* You have deployed a *{PlatformNameShort}* instance using the {OperatorPlatform}.
 
 .Procedure 
 . Log in to {OCP}.
-. Go to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Navigate to menu:Operators[Installed Operators].
+. Select your {OperatorPlatform} deployment.
 . Go to your *All Instances* tab, and click btn:[Create New].
 . Select *{PlatformNameShort} Backup* from the list.
 +
-NOTE: When creating the *{PlatformNameShort} Backup* resource it also creates backup resources for each of the nested components that are enabled.
+[NOTE]
+====
+When creating the *{PlatformNameShort} Backup* resource it also creates backup resources for each of the nested components that are enabled.
+====
 +
 . In the *Name* field, enter a name for the backup.
 . In the *Deployment name* field, enter the name of the deployed {PlatformNameShort} instance being backed up. For example if your {PlatformNameShort} deployment must be backed up and the deployment name is aap, enter 'aap' in the *Deployment name* field.
@@ -38,8 +41,8 @@ spec:
 To verify that your backup was successful you can:
 
 . Log in to {OCP}.
-. Go to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Navigate to menu:Operators[Installed Operators].
+. Select your {OperatorPlatform} deployment.
 . Click *All Instances*.
 
 The *All Instances* page displays the main backup and the backups for each component with the name you specified when creating your backup resource. 
