--- a/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
@@ -17,8 +17,8 @@ Now, you create a single *AnsibleAutomationPlatformRestore* resource, which  cre
 
 .Procedure 
 . Log in to {OCP}.
-. Go to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Navigate to menu:Operators[Installed Operators].
+. Select your {OperatorPlatform} deployment.
 . Go to your *All Instances* tab, and click btn:[Create New].
 . Select *{PlatformNameShort} Restore* from the list.
 . For *Name* enter the name for the recovery deployment. 
@@ -29,7 +29,10 @@ Now, you create a single *AnsibleAutomationPlatformRestore* resource, which  cre
 
 Your backups starts restoring under the *AnsibleAutomationPlatformRestores* tab.
 
-NOTE: The recovery is not complete until all the resources are successfully restored. Depending on the size of your database this this can take some time.
+[NOTE]
+====
+The recovery is not complete until all the resources are successfully restored. Depending on the size of your database this this can take some time.
+====
 
 .Verification
 To verify that your recovery was successful you can:
