--- a/downstream/modules/platform/proc-aap-controller-yaml-backup.adoc
+++ b/downstream/modules/platform/proc-aap-controller-yaml-backup.adoc
@@ -7,8 +7,8 @@ See the following procedure for how to back up a deployment of the {ControllerNa
 .Prerequisites
 
 * You must be authenticated with an OpenShift cluster.
-* You have installed the {OperatorPlatform} on the cluster.
-* The {ControllerName} is deployed to using the {OperatorPlatform}.
+* You have installed {OperatorPlatform} on the cluster.
+* You have deployed {ControllerName} using the {OperatorPlatform}.
 
 .Procedure
 
@@ -26,8 +26,11 @@ spec:
 ----
 +
 
-NOTE: The "deployment_name" above is the name of the {ControllerName} deployment you intend to backup from. 
+[NOTE]
+====
+The "deployment_name" above is the name of the {ControllerName} deployment you intend to backup from. 
 The namespace above is the one containing the {ControllerName} deployment you intend to back up.
+====
 
 . Use the `oc apply` command to create the backup object in your cluster:
 
