--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -365,3 +365,6 @@
 //
 // titles/develop-automation-content
 :TitleDevelopAutomationContent: Developing automation content
+//
+// titles/topologies
+:TitleTopologies: Supported deployment models for Ansible Automation Platform
