Create directories for supported topologies doc (#1828)
Added the relevant directories, files, symlinks etc. for the new topology doc

Create a document for supported topologies

https://issues.redhat.com/browse/AAP-28228

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -364,3 +364,6 @@
 //
 // titles/develop-automation-content
 :TitleDevelopAutomationContent: Developing automation content
+//
+// titles/topologies
+:TitleTopologies: Supported deployment models for Ansible Automation Platform
