--- a/downstream/assemblies/eda/assembly-eda-projects.adoc
+++ b/downstream/assemblies/eda/assembly-eda-projects.adoc
@@ -6,6 +6,12 @@ Projects are a logical collection of rulebooks.
 They must be a git repository and only http protocol is supported. 
 The rulebooks of a project must be located in the path defined for {EDAName} content in Ansible collections: `/extensions/eda/rulebooks` at the root of the project.
 
+[NOTE]
+====
+* Do not link a project to an empty repository. Linking a project to an empty repository causes synchronization errors.
+* When Redis is unavailable due to a failure, you will not be able to create or sync projects.
+====
+
 include::eda/proc-eda-set-up-new-project.adoc[leveloffset=+1]
 include::eda/con-eda-projects-list-view.adoc[leveloffset=+1]
 include::eda/proc-eda-editing-a-project.adoc[leveloffset=+1]
