--- a/downstream/assemblies/eda/assembly-eda-rulebook-activations.adoc
+++ b/downstream/assemblies/eda/assembly-eda-rulebook-activations.adoc
@@ -6,6 +6,17 @@
 
 A rulebook activation is a process running in the background defined by a decision environment executing a specific rulebook.
 
+[IMPORTANT]
+====
+To meet high availability demands, {EDAcontroller} shares centralized link:https://redis.io/[Redis (REmote DIctionary Server)] with the {PlatformNameShort} UI. When Redis is unavailable due to failure, the following functions will not be available:
+
+* Creating an activation, if `is_enabled` is True
+* Deleting an activation
+* Enabling an activation, if not already enabled
+* Disabling an activation, if not already disabled
+* Restarting an activation
+====
+
 include::eda/proc-eda-set-up-rulebook-activation.adoc[leveloffset=+1]
 include::eda/con-eda-rulebook-activation-list-view.adoc[leveloffset=+1]
 include::eda/proc-eda-view-activation-output.adoc[leveloffset=+2]
