--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -188,3 +188,17 @@ You can use increasing verbosity, up to 4 v's (-vvvv) to see the details of the 
 ====
 This can significantly increase installation time, so it is recommended that you use it only as needed or requested by Red Hat support.
 ====
+
+.Configuring a HAProxy load balancer
+
+To configure a HAProxy load balancer in front of platform gateway with a custom CA cert, set the following inventory file variables under the `[all:vars]` group:
+
+----
+custom_ca_cert=<path_to_cert_crt>
+gateway_main_url=<https://load_balancer_url>
+----
+
+[NOTE] 
+====
+HAProxy SSL passthrough mode is not supported with platform gateway.
+====
