AAP-28434 Updated notes for HA Redis failure impact according to SME feedback

--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -18,5 +18,5 @@ The following procedures form the user configuration:
 
 ====
 * API documentation for {EDAcontroller} is available at \https://<eda-server-host>/api/eda/v1/docs
-* To meet high availability demands, {EDAcontroller} shares centralized link:https://redis.io/[Redis (REmote DIctionary Server)] with the {PlatformNameShort} UI. When Redis is unavailable due to a failure, you will not be able to create projects or enable rulebook activations.
+* To meet high availability demands, {EDAcontroller} shares centralized link:https://redis.io/[Redis (REmote DIctionary Server)] with the {PlatformNameShort} UI. When Redis is unavailable, you will not be able to create projects or enable rulebook activations.
 ====
