Add rpm release notes RHSA-2024:6428
2.4 Release Notes - AAP 2.4 RPM release 5th Sep

https://issues.redhat.com/browse/AAP-30626

--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -28,6 +28,8 @@ include::topics/async-updates.adoc[leveloffset=+1]
 
 include::topics/rpm-version-table.adoc[leveloffset=+3]
 
+include::topics/rpm-24-72.adoc[leveloffset=+3]
+
 include::topics/rpm-24-7.adoc[leveloffset=+3]
 
 include::topics/rpm-24-6.adoc[leveloffset=+3]
