Fix the title for Managing content document

--- a/downstream/titles/hub/managing-content/master.adoc
+++ b/downstream/titles/hub/managing-content/master.adoc
@@ -4,7 +4,7 @@
 :experimental:
 include::attributes/attributes.adoc[]
 
-= Managing content in automation hub
+= Managing automation content in Ansible Automation Platform
 
 
 include::{Boilerplate}[]
