AAP-28228 added OCP assembly

--- a/downstream/titles/topologies/master.adoc
+++ b/downstream/titles/topologies/master.adoc
@@ -18,5 +18,6 @@ include::topologies/assembly-rpm-topologies.adoc[leveloffset=+1]
 include::topologies/assembly-container-topologies.adoc[leveloffset=+1]
 
 //Operator supported topologies
+include::topologies/assembly-ocp-topologies.adoc[leveloffset=+1]
 
 //Automation mesh nodes 
