Add RPM and CONT modules to topology docs
Create a document for supported topologies

https://issues.redhat.com/browse/AAP-28228

--- a/downstream/assemblies/topologies/assembly-container-topologies.adoc
+++ b/downstream/assemblies/topologies/assembly-container-topologies.adoc
@@ -5,3 +5,4 @@
 The containerized installer deploys {PlatformNameShort} on {RHEL} by using Podman which runs the platform in containers on host machines. Customers manage the product and infrastructure lifecycle.
 
 //Container enterprise topology
+include::topologies/ref-cont-b-env-a.adoc[leveloffset=+1]
