--- a/downstream/assemblies/topologies/assembly-rpm-topologies.adoc
+++ b/downstream/assemblies/topologies/assembly-rpm-topologies.adoc
@@ -5,5 +5,7 @@
 The RPM installer deploys {PlatformNameShort} on {RHEL} by using RPMs to install the platform on host machines. Customers manage the product and infrastructure lifecycle.
 
 //RPM enterprise topology
+include::topologies/ref-rpm-b-env-a.adoc[leveloffset=+1]
 
 //RPM mixed enterprise topology
+include::topologies/ref-rpm-b-env-b.adoc[leveloffset=+1]
