Peer review edit

--- a/downstream/assemblies/eda/assembly-eda-rulebook-activations.adoc
+++ b/downstream/assemblies/eda/assembly-eda-rulebook-activations.adoc
@@ -5,7 +5,7 @@
 [role="_abstract"]
 
 A rulebook is a set of conditional rules that {EDAName} uses to perform IT actions in an event-driven automation model. 
-Rulebooks are the means by which users tell {EDAName} which source to check for an event and—when that event occurs—what to do when certain conditions are met.
+Rulebooks are the means by which users tell {EDAName} which source to check for an event and when that event occurs what to do when certain conditions are met.
 
 A rulebook specifies actions to be performed when a rule is triggered. 
 A rule gets triggered when the events match the conditions for the rules. 
