Adding new content for 2.5 to rulebook act. chapter (#1793)
* Adding new content for 2.5 to rulebook act. chapter

Update the Rulebook activations chapter

https://issues.redhat.com/browse/AAP-29949

Affects `titles/eda/eda-user-guide`

* Further edits to rulebook act. chapter

* Further edits to rulebook chapter

* Peer review edit

--- a/downstream/assemblies/eda/assembly-eda-rulebook-activations.adoc
+++ b/downstream/assemblies/eda/assembly-eda-rulebook-activations.adoc
@@ -4,7 +4,34 @@
 
 [role="_abstract"]
 
-A rulebook activation is a process running in the background defined by a decision environment executing a specific rulebook.
+A rulebook is a set of conditional rules that {EDAName} uses to perform IT actions in an event-driven automation model. 
+Rulebooks are the means by which users tell {EDAName} which source to check for an event and when that event occurs what to do when certain conditions are met.
+
+A rulebook specifies actions to be performed when a rule is triggered. 
+A rule gets triggered when the events match the conditions for the rules. 
+The following actions are currently supported:
+
+* `run_playbook` (only supported with ansible-rulebook CLI)
+* `run_module`
+* `run_job_template`
+* `run_workflow_template`
+* `set_fact`
+* `post_event`
+* `retract_fact`
+* `print_event`
+* `shutdown`
+* `debug`
+* `none`
+
+To view further details, see link:https://ansible.readthedocs.io/projects/rulebook/en/stable/actions.html[Actions]. 
+
+A rulebook activation is a process running in the background defined by a decision environment executing a specific rulebook. You can set up your rulebook activation by following xref:eda-set-up-rulebook-activation[Setting up a rulebook activation].
+
+[WARNING]
+====
+Red Hat does not recommend the use of a non-supported source plugin with 1 postgres database. 
+This can pose a potential risk to your use of {PlatformNameShort}. 
+====
 
 [IMPORTANT]
 ====
