--- a/downstream/modules/eda/proc-eda-delete-rulebook-activations.adoc
+++ b/downstream/modules/eda/proc-eda-delete-rulebook-activations.adoc
@@ -2,7 +2,9 @@
 
 = Deleting rulebook activations
 
+.Procedure
+
 . Select the btn:[More Actions] icon *{MoreActionsIcon}* next to the *Rulebook Activation enabled/disabled* toggle.
 . Select btn:[Delete rulebook activation].
-. In the popup window, select btn:[Yes, I confirm that I want to delete these X rulebook activations].
+. In the window, select btn:[Yes, I confirm that I want to delete these X rulebook activations].
 . Select btn:[Delete rulebook activations].
