Add rpm-24-71 to async release notes
2.4 Release Notes - AAP 2.4 RPM release 5th Sep

AAP-30626

--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -29,17 +29,12 @@ include::topics/async-updates.adoc[leveloffset=+1]
 include::topics/rpm-version-table.adoc[leveloffset=+3]
 
 include::topics/rpm-24-72.adoc[leveloffset=+3]
-
+include::topics/rpm-24-71.adoc[leveloffset=+3]
 include::topics/rpm-24-7.adoc[leveloffset=+3]
-
 include::topics/rpm-24-6.adoc[leveloffset=+3]
-
 include::topics/rpm-24-5.adoc[leveloffset=+3]
-
 include::topics/rpm-24-4.adoc[leveloffset=+3]
-
 include::topics/rpm-24-3.adoc[leveloffset=+3]
-
 include::topics/rpm-24-2.adoc[leveloffset=+3]
 
 === Installer releases
@@ -47,29 +42,17 @@ include::topics/rpm-24-2.adoc[leveloffset=+3]
 include::topics/installer-version-table.adoc[leveloffset=+3]
 
 include::topics/installer-24-71.adoc[leveloffset=+3]
-
 include::topics/installer-24-7.adoc[leveloffset=+3]
-
 include::topics/installer-24-62.adoc[leveloffset=+3]
-
 include::topics/installer-24-61.adoc[leveloffset=+3]
-
 include::topics/installer-24-6.adoc[leveloffset=+3]
-
 include::topics/installer-24-24.adoc[leveloffset=+3]
-
 include::topics/installer-24-23.adoc[leveloffset=+3]
-
 include::topics/installer-24-22.adoc[leveloffset=+3]
-
 include::topics/installer-24-21.adoc[leveloffset=+3]
-
 include::topics/installer-24-14.adoc[leveloffset=+3]
-
 include::topics/installer-24-13.adoc[leveloffset=+3]
-
 include::topics/installer-24-12.adoc[leveloffset=+3]
-
 include::topics/installer-24-11.adoc[leveloffset=+3]
 
 // Other async releases
