--- a/downstream/titles/release-notes/topics/installer-24-71.adoc
+++ b/downstream/titles/release-notes/topics/installer-24-71.adoc
@@ -8,7 +8,7 @@ link:https://access.redhat.com/errata/RHBA-2024:4555[RHBA-2024:4555]
 
 == Related RPM releases
 
-* link:https://access.redhat.com/errata/RHSA-2024:4522[RHSA-2024:4522 - Security Advisory - July 12, 2024]
+* xref:rpm-24-71[RHSA-2024:4522 - Security Advisory - July 12, 2024]
 
 == Related container releases
 
