--- a/downstream/titles/release-notes/topics/rpm-24-72.adoc
+++ b/downstream/titles/release-notes/topics/rpm-24-72.adoc
@@ -1,8 +1,8 @@
-// This is the release notes for 2.4-7.1 RPM release
+// This is the release notes for 2.4-7.2 RPM release
 
 [id="rpm-24-72"]
 
-= RHSA-2024:6428 - security advisory - September 05, 2024
+= RHSA-2024:6428 - Security Advisory - September 05, 2024
 
 link:https://access.redhat.com/errata/RHSA-2024:6428[RHSA-2024:6428]
 
