--- a/downstream/titles/release-notes/topics/rpm-version-table.adoc
+++ b/downstream/titles/release-notes/topics/rpm-version-table.adoc
@@ -8,17 +8,23 @@
 
 | xref:rpm-24-72[RHSA-2024:6428] + 
 Sep 5, 2024  | 
-* `ansible-automation-platform-installer` 2.4-7 
-* `ansible-automation-platform-setup` 2.4-7
-* `ansible-core` 2.15.11
+* `ansible-automation-platform-installer` 2.4-7.1 
+* `ansible-core` 2.15.12
 * {ControllerNameStart} 4.5.10
+* {HubNameStart} 4.9.2
+* {EDAName} 1.0.7
+
+| xref:rpm-24-71[RHSA-2024:4522] + 
+Jul 12, 2024  | 
+* `ansible-automation-platform-installer` 2.4-7.1 
+* `ansible-core` 2.15.12
+* {ControllerNameStart} 4.5.8
 * {HubNameStart} 4.9.2
 * {EDAName} 1.0.7
 
 | xref:rpm-24-7[RHSA-2024:3781] + 
 Jun 10, 2024  | 
-* `ansible-automation-platform-installer` 2.4-7 
-* `ansible-automation-platform-setup` 2.4-7
+* `ansible-automation-platform-installer` 2.4-7.1 
 * `ansible-core` 2.15.11
 * {ControllerNameStart} 4.5.7
 * {HubNameStart} 4.9.2
