--- a/downstream/assemblies/topologies/assembly-ocp-topologies.adoc
+++ b/downstream/assemblies/topologies/assembly-ocp-topologies.adoc
@@ -5,5 +5,6 @@
 The {OperatorPlatform} uses Red Hat OpenShift operators to deploy {PlatformNameShort} within Red Hat OpenShift. Customers manage the product and infrastructure lifecycle.
 
 //OCP growth topology
-
+include::topologies/ref-ocp-a-env-a.adoc[leveloffset=+1]
 //OCP enterprise topology
+// include::topologies/ref-ocp-b-env-a.adoc[leveloffset=+1]
