Add bundle installer 2.4-7.2 release notes
2.4 Release Notes - AAP 2.4-7.2 Bundle Installer release

https://issues.redhat.com/browse/AAP-28956

--- a/downstream/titles/release-notes/topics/installer-version-table.adoc
+++ b/downstream/titles/release-notes/topics/installer-version-table.adoc
@@ -6,6 +6,13 @@
 |===
 | Installation bundle | Component versions
 
+| xref:installer-24-72[2.4-7.2] + 
+September 06, 2024  | 
+* `ansible-core` 2.15.12
+* {ControllerNameStart} 4.5.10
+* {HubNameStart} 4.9.2
+* {EDAName} 1.0.7
+
 | xref:installer-24-71[2.4-7.1] + 
 July 15, 2024  | 
 * `ansible-core` 2.15.12
