--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -41,6 +41,7 @@ include::topics/rpm-24-2.adoc[leveloffset=+3]
 
 include::topics/installer-version-table.adoc[leveloffset=+3]
 
+include::topics/installer-24-72.adoc[leveloffset=+3]
 include::topics/installer-24-71.adoc[leveloffset=+3]
 include::topics/installer-24-7.adoc[leveloffset=+3]
 include::topics/installer-24-62.adoc[leveloffset=+3]
