AAP-22022 Applied updates from SME review feedback (M. Kanoor

--- a/downstream/modules/eda/con-custom-credential-types.adoc
+++ b/downstream/modules/eda/con-custom-credential-types.adoc
@@ -2,12 +2,11 @@
 
 = Custom credential types
 
-As a system administrator, you can define a custom credential type works in ways similar to existing credential types in a standard format using a YAML or JSON-like definition. 
+As a system administrator, you can define a custom credential type that works in ways similar to existing credential types in a standard format using a YAML or JSON-like definition. 
 
 Each credential type displays its own unique configurations in the Input Configuration field and the Injector Configuration field, if applicable. Custom credentials support Ansible extra variables as a means of injecting their authentication information. 
 
-//[J.Self] Reviewers: please confirm if this is true. I borrowed it from automation controller content, per suggestions from several SMEs and one of our principal tech writers. I just want to confirm technical accuracy here, especially the last line as we might not have "machine credentials".
-You can attach one or more cloud, vault, and {PlatformName} credentials to a job template. 
+You can attach one or more cloud, vault, and {PlatformName} credentials to a rulebook activation. 
 
 [NOTE]
 ====
