--- a/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
@@ -2,7 +2,7 @@
 
 = Creating a new credential type
 
-You can create a credential type to use with a source plugin or a private container registry that you select based on the supported, default credential types. You can make your credential type available to a team or individuals.
+You can create a credential type to use with a source plugin that you select based on the supported, default credential types. You can make your credential type available to a team or individuals.
 
 
 .Procedure
@@ -60,8 +60,6 @@ View more YAML examples at the link:https://yaml.org/spec/1.2.2/[YAML page].
 +
 View more JSON examples at link:https://www.json.org/json-en.html[The JSON website].
 
-
-
 . In the *Injector Configuration* field, enter environment variables or extra variables that specify the values a credential type can inject.
 The format can be in YAML or JSON (see examples in the previous step).
 +
@@ -71,31 +69,14 @@ The following configuration in JSON format shows each field and how they are use
 ----
 
 {
-  "file": {
-      "template": "[mycloud]\ntoken={{ api_token }}"
-  },
-  "env": {
-      "THIRD_PARTY_CLOUD_API_TOKEN": "{{ api_token }}"
-  },
-  "extra_vars": {
+    "extra_vars": {
       "some_extra_var": "{{ username }}:{{ password }}"
   }
 }
 ----
 +
 Credential Types can also generate temporary files to support `.ini` files or certificate or key data:
-+
-[literal, options="nowrap" subs="+attributes"]
-----
-{
-  "file": {
-      "template": "[mycloud]\ntoken={{ api_token }}"
-  },
-  "env": {
-      "MY_CLOUD_INI_FILE": "{{ tower.filename }}"
-  }
-}
-----
+
 +
 In this example, {EDAcontroller} writes a temporary file that has:
 +
@@ -130,14 +111,9 @@ The following is an example of referencing many files in a custom credential tem
 [literal, options="nowrap" subs="+attributes"]
 ----
 {
-  "file": {
-    "template.cert_file": "[mycert]\n{{ cert }}",
-    "template.key_file": "[mykey]\n{{ key }}"
-},
-"env": {
-    "MY_CERT_INI_FILE": "{{ tower.filename.cert_file }}",
-    "MY_KEY_INI_FILE": "{{ tower.filename.key_file }}"
-}
+  "extra_vars": {
+      "some_extra_var": "{{ username }}:{{ password }}"
+  }
 }
 ----
 
