AAP-22022 Applied additional updates based on SME review

--- a/downstream/modules/eda/proc-eda-delete-credential.adoc
+++ b/downstream/modules/eda/proc-eda-delete-credential.adoc
@@ -13,7 +13,7 @@ You can delete credentials if they are no longer needed for your organization.
 +
 [NOTE]
 ====
-If your credential is still in use by other resources in your organization, a warning message is displayed letting you know that the credential cannot be deleted. Also, if your credential is being used in an event stream, you cannot delete it until the event stream is deleted or attached to a different credential. It is recommended to avoid deleting a credential that is in use as it can lead to broken activations. 
+If your credential is still in use by other resources in your organization, a warning message is displayed letting you know that the credential cannot be deleted. Also, if your credential is being used in an event stream, you cannot delete it until the event stream is deleted or attached to a different credential. In general, avoid deleting a credential that is in use because it can lead to broken activations. 
 ====
 . Click btn:[Delete credential].
 
