--- a/downstream/assemblies/eda/assembly-eda-credentials.adoc
+++ b/downstream/assemblies/eda/assembly-eda-credentials.adoc
@@ -2,7 +2,7 @@
 
 = Credentials
 
-You can use credentials to store secrets that can be used for authentication purposes with resources, such as decision environments, rulebook activations and projects for {EDAcontroller}, and inventories and projects for {ControllerName}.
+You can use credentials to store secrets that can be used for authentication purposes with resources, such as decision environments, rulebook activations and projects for {EDAcontroller}, and projects for {ControllerName}.
 
 Credentials authenticate users when launching jobs against machines and importing project content from a version control system.
 
