AAP-22022 Applied additional updates based on SME review

--- a/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
@@ -112,7 +112,10 @@ The following is an example of referencing many files in a custom credential tem
 ----
 {
   "extra_vars": {
-      "some_extra_var": "{{ username }}:{{ password }}"
+      "src1_username": "{{ src1_username }}"
+      "src1_password": "{{ src1_password }}"
+      "src2_username": "{{ src2_username }}"
+      "src2_password": "{{ src2_password }}"
   }
 }
 ----
