Fix Managing content document title to remove AAP

--- a/downstream/titles/hub/managing-content/master.adoc
+++ b/downstream/titles/hub/managing-content/master.adoc
@@ -4,7 +4,7 @@
 :experimental:
 include::attributes/attributes.adoc[]
 
-= Managing automation content in Ansible Automation Platform
+= Managing automation content
 
 
 include::{Boilerplate}[]
