AAP-22994 Updated EDA system requirements, per SMEs' suggestions

--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -12,8 +12,8 @@ h| Requirement | Required
 | *CPUs* | 4
 | *Local disk* a| 
 * Hard drive must be 40 GB minimum with at least 20 GB available under /var.
-* Storage volume must be rated for a miniimum baseline of 1500 IOPS.
-* If the cluster has many large projects, consider doubling the GB in/var to avoid disk space errors.
+* Storage volume must be rated for a minimum baseline of 1500 IOPS.
+* If the cluster has many large projects, consider doubling the GB in /var to avoid disk space errors.
 |===
 
 [IMPORTANT]
