AAP-30685 Ansible plug-ins for RHDH testathon feedback

--- a/downstream/modules/devtools/proc-rhdh-configure-rbac.adoc
+++ b/downstream/modules/devtools/proc-rhdh-configure-rbac.adoc
@@ -6,7 +6,12 @@
 {RHDH} offers Role-based Access Control (RBAC) functionality.
 RBAC can then be applied to the Ansible plug-ins content. 
 
-The following example adds RBAC to Red Hat Developer Hub.
+Assign the following roles:
+
+* Members of the `admin:superUsers` group can select templates in the *Create* tab of the Ansible plug-ins to create playbook and collection projects.
+* Members of the `admin:users` group can view templates in the *Create* tab of the Ansible plug-ins.
+
+The following example adds RBAC to {RHDH}.
 
 ----
 data:
@@ -25,6 +30,6 @@ data:
 
 
 For more information about permission policies and managing RBAC, refer to the
-link:{BaseURL}/red_hat_developer_hub/1.2/html-single/administration_guide_for_red_hat_developer_hub/con-rbac-overview_assembly-rhdh-integration-aks[Enabling authentication in Red Hat Developer Hub]
-chapter of the _Administration guide for Red Hat Developer Hub_.
+link:{BaseURL}/red_hat_developer_hub/{RHDHVers}/html-single/authorization/index[_Authorization_]
+guide for Red Hat Developer Hub.
 
