--- a/downstream/modules/devtools/proc-rhdh-create-plugin-registry.adoc
+++ b/downstream/modules/devtools/proc-rhdh-create-plugin-registry.adoc
@@ -23,7 +23,7 @@ $ oc new-app --image-stream=plugin-registry
 
 .Verification
 
-To verify that the plugin-registry was deployed successfully, open the Developer perspective on the {RHDH} application in the OpenShift Web console.
+To verify that the plugin-registry was deployed successfully, open the *Topology* view in the *Developer* perspective on the {RHDH} application in the OpenShift Web console.
 
 . Click the plug-in registry to view the log. 
 +
