--- a/downstream/modules/devtools/ref-rhdh-install-ocp-prereqs.adoc
+++ b/downstream/modules/devtools/ref-rhdh-install-ocp-prereqs.adoc
@@ -5,8 +5,8 @@
 
 * {RHDH} installed on {OCP} using a Helm chart.
 Follow the steps in the 
-link:{BaseURL}/red_hat_developer_hub/1.2/html-single/administration_guide_for_red_hat_developer_hub/assembly-install-rhdh-ocp#proc-install-rhdh-ocp-helm_assembly-install-rhdh-ocp[Deploying Red Hat Developer Hub on OpenShift Container Platform using Helm chart]
-section of _Administration Guide for Red Hat Developer Hub_.
+https://docs.redhat.com/en/documentation/red_hat_developer_hub/{RHDHVers}/html/installing_red_hat_developer_hub_on_openshift_container_platform/index#assembly-install-rhdh-ocp-helm[Installing Red Hat Developer Hub on OpenShift Container Platform with the Helm chart]
+section of _Installing Red Hat Developer Hub on OpenShift Container Platform_.
 * A valid subscription to {PlatformName}.
 * A user with the {OCPShort} administrator role has configured the appropriate roles and permissions within your project to create an application.
 * The {RHDH} instance can query the automation controller API.
