--- a/downstream/assemblies/devtools/assembly-rhdh-install-ocp-helm.adoc
+++ b/downstream/assemblies/devtools/assembly-rhdh-install-ocp-helm.adoc
@@ -10,7 +10,7 @@ The following procedures describe how to install Ansible plug-ins in {RHDH} inst
 The workflow is as follows:
 
 . Download the Ansible plug-ins files.
-. Create a plug-in registry in your Openshift cluster to host the Ansible plug-ins.
+. Create a plug-in registry in your OpenShift cluster to host the Ansible plug-ins.
 . Add the plug-ins to the Helm chart.
 . Create a custom ConfigMap.
 . Add your custom ConfigMap to your Helm chart.
