--- a/downstream/assemblies/devtools/assembly-rhdh-ocp-required-installation.adoc
+++ b/downstream/assemblies/devtools/assembly-rhdh-ocp-required-installation.adoc
@@ -14,6 +14,7 @@ include::devtools/proc-rhdh-add-custom-configmap.adoc[leveloffset=+1]
 include::devtools/proc-rhdh-configure-devtools-server.adoc[leveloffset=+1]
 include::devtools/proc-rhdh-configure-aap-details.adoc[leveloffset=+1]
 include::devtools/proc-rhdh-add-plugin-software-templates.adoc[leveloffset=+1]
+include::devtools/proc-rhdh-configure-rbac.adoc[leveloffset=+1]
 
 ifdef::parent-context-of-rhdh-ocp-required-installation[:context: {parent-context-of-rhdh-ocp-required-installation}]
 ifndef::parent-context-of-rhdh-ocp-required-installation[:!context:]
