--- a/downstream/assemblies/devtools/assembly-rhdh-telemetry-capturing.adoc
+++ b/downstream/assemblies/devtools/assembly-rhdh-telemetry-capturing.adoc
@@ -17,7 +17,7 @@ Red Hat collects and analyzes the following data to improve your experience with
 
 With {RHDH}, you can disable or customize the telemetry data collection feature.
 For more information, refer to the
-link:{BaseURL}/red_hat_developer_hub/1.2/html-single/administration_guide_for_red_hat_developer_hub/assembly-rhdh-telemetry#assembly-rhdh-telemetry[Telemetry data collection]
+link:{BaseURL}/red_hat_developer_hub/{RHDHVers}/html-single/administration_guide_for_red_hat_developer_hub/index#assembly-rhdh-telemetry[Telemetry data collection]
 section of the _Administration guide for Red Hat Developer Hub_.
 
 ifdef::parent-context-of-rhdh-telemetry-capturing[:context: {parent-context-of-rhdh-telemetry-capturing}]
