--- a/downstream/modules/devtools/proc-rhdh-add-custom-configmap.adoc
+++ b/downstream/modules/devtools/proc-rhdh-add-custom-configmap.adoc
@@ -3,8 +3,10 @@
 [id="rhdh-add-custom-configmap_{context}"]
 = Adding a custom ConfigMap
 
-Create a {RHDH} config map named `app-config-rhdh` following the procedure in
-link:{BaseURL}/red_hat_developer_hub/{RHDHVers}/html/administration_guide_for_red_hat_developer_hub/assembly-add-custom-app-file-openshift_admin-rhdh[Adding a custom application configuration file to Red Hat OpenShift Container Platform] in the _Administration guide for Red Hat Developer Hub_.
+Create a {RHDH} ConfigMap following the procedure in
+link:{BaseURL}/red_hat_developer_hub/{RHDHVers}/html/administration_guide_for_red_hat_developer_hub/assembly-add-custom-app-file-openshift_admin-rhdh[Adding a custom application configuration file to Red Hat OpenShift Container Platform]
+in the _Administration guide for Red Hat Developer Hub_.
+The examples below use a custom ConfigMap named `app-config-rhdh`
 
 To edit your custom ConfigMap, log in to the OpenShift UI and navigate to menu:Select Project ( developerHubProj )[ConfigMaps > {developer-hub}-app-config > EditConfigMaps > app-config-rhdh].
 
