Add CONT-A-ENV-A to topology docs
Create a document for supported topologies

https://issues.redhat.com/browse/AAP-28228

--- a/downstream/assemblies/topologies/assembly-container-topologies.adoc
+++ b/downstream/assemblies/topologies/assembly-container-topologies.adoc
@@ -4,5 +4,8 @@
 
 The containerized installer deploys {PlatformNameShort} on {RHEL} by using Podman which runs the platform in containers on host machines. Customers manage the product and infrastructure lifecycle.
 
+//Container growth topology
+include::topologies/ref-cont-a-env-a.adoc[leveloffset=+1]
+
 //Container enterprise topology
 include::topologies/ref-cont-b-env-a.adoc[leveloffset=+1]
