AAP-28228-A updated OCP-A-ENV-A

--- a/downstream/modules/topologies/ref-ocp-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-a-env-a.adoc
@@ -5,7 +5,7 @@ The growth topology is intended for organizations that do not require {PlatformN
 
 == Infrastructure topology
 
-A Single Node OpenShift (SNO) cluster has been tested with the following requirements: 32GB RAM, 16CPU, 128GB local disk, and 3000 IOPS.
+A Single Node OpenShift (SNO) cluster has been tested with the following requirements: 32 GB RAM, 16 CPU, 128 GB local disk, and 3000 IOPS.
 
 .Infrastructure topology
 [options="header"]
@@ -40,13 +40,17 @@ a|
 * Valid {PlatformName} subscription
 * Valid {RHEL} subscription (to consume the BaseOS and AppStream repositories)
 | Operating system | {RHEL} 9.2 or later 64-bit (x86_64)
-| Red Hat OpenShift | 
-a|
-* version: 4.14
+| Red Hat OpenShift  
+a| 
+* Version: 4.14
 * num_of_control_nodes: 1
 * num_of_worker_nodes: 1 
-b|
 * VM Configuration:
+** OS: Red Hat Enterprise Linux 9.2 or later 64-bit (x86)
+**  CPU: 16 
+**  RAM: 32 GB
+**  Disk: 128 GB
+**  IOPS: 3000/s
 | Ansible-core | Ansible-core version 2.15 or later
 | Browser | A currently supported version of Mozilla Firefox or Google Chrome.
 | Database | PostgreSQL version 15
