AAP-28228-A added OCP-B-ENV-A

--- a/downstream/assemblies/topologies/assembly-ocp-topologies.adoc
+++ b/downstream/assemblies/topologies/assembly-ocp-topologies.adoc
@@ -7,4 +7,4 @@ The {OperatorPlatform} uses Red Hat OpenShift operators to deploy {PlatformNameS
 //OCP growth topology
 include::topologies/ref-ocp-a-env-a.adoc[leveloffset=+1]
 //OCP enterprise topology
-// include::topologies/ref-ocp-b-env-a.adoc[leveloffset=+1]
+include::topologies/ref-ocp-b-env-a.adoc[leveloffset=+1]
